package org.truong.gvrp_engine_api.model;

public enum OptimizationMode {
    SINGLE_WEIGHTED,
    MULTI_PARETO
}
